# resume-maker-slint

./: .gitignore  Cargo.toml  LICENSE  README.md
saves/: resume_data.json  resume_data_back.json  resumes_data.json
src/: main.rs  tst.rs
src/save_information/: delete_json.rs  json_setup.rs  load_json.rs  mod.rs  save_json.rs  ui.rs
src/save_informations/: json_definition.rs  mod.rs  save_json.rs  ui.rs
templates/: resume.typ
ui/: app-window.slint
ui/assets/: styles.slint
ui/components/: field.slint  field_type.slint  page.slint  side_bar.slint
ui/models/: education_data.slint  personal_info.slint
ui/pages/: education.slint  personal.slint
